WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276598
Crash in InlineDisplayLineBuilder::addLineClampTrailingLinkBoxIfApplicable
https://bugs.webkit.org/show_bug.cgi?id=276598
Summary
Crash in InlineDisplayLineBuilder::addLineClampTrailingLinkBoxIfApplicable
alan
Reported
2024-07-14 20:10:52 PDT
<
rdar://129747945
>
Attachments
Patch
(2.54 KB, patch)
2024-07-14 20:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(2.65 KB, patch)
2024-07-15 05:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-07-14 20:25:01 PDT
Created
attachment 471884
[details]
Patch
alan
Comment 2
2024-07-15 05:23:01 PDT
Created
attachment 471885
[details]
[fast-cq]Patch
EWS
Comment 3
2024-07-15 11:25:20 PDT
Committed
280974@main
(33a3d65c563b): <
https://commits.webkit.org/280974@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471885
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug